# fast-api-scaff

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/: scaff-rules.md
.cursor/rules/: fastapi-demo2-api-router.mdc  fastapi-demo2-architecture.mdc  fastapi-demo2-enums.mdc  fastapi-demo2-errors.mdc  fastapi-demo2-python.mdc  fastapi-scaff-enums.mdc  fastapi-scaff-error-codes.mdc  fastapi-scaff-pipeline-db-router-agent.mdc  fastapi-scaff-pipeline-db-router.mdc  fastapi-scaff-python-conventions.mdc  fastapi-scaff-python-imports-init.mdc  fastapi-scaff-structure-layers.mdc
app/: Singleton.py  __init__.py  main.py  test.py
app/api/: openapi.py  public_paths.py  router.py
app/application/: __init__.py
app/common/: __init__.py
app/core/: __init__.py  api_response.py  config.py
app/domain/: __init__.py
app/enums/: __init__.py  error_code.py  user_error_code.py  user_status.py
app/infrastructure/: __init__.py  database.py  db.py  redis.py
app/interfaces/: __init__.py
app/middleware/: __init__.py  auth_token.py  cors.py  exception_capture.py  query_param_decode.py  request_log.py  trace_id.py
app/models/: __init__.py  base.py  user.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: __init__.py  user.py
app/services/: user_service.py
app/utils/: __init__.py  codec.py  jwt.py  (+2 more)
config/: __init__.py  app.py  config.py  cors.py  database.py  jwt.py  logging.py  redis.py  service.py  setting.py
database/: alembic.ini
docs/: service_code.md
public/: __init__.py  main.py
(+92 files in other folders)
