[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "fastapi>=0.135.2",
    "myapplication>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "starlette>=1.0.0",
    "uuid>=1.30",
    "uvicorn>=0.42.0",
]
