[project]
name = "fast-api-scaff"
version = "0.1.0"
description = "A practical FastAPI scaffold with config, middleware, response schema, and database basics."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.11.0",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.44.0",
]
